k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-mlops-ingress
  namespace: models
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mlops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iris-mlops-svc
                port:
                  number: 8000
